--- a/project-show.html
+++ b/project-show.html
@@ -37,11 +37,11 @@
     </div>
     <!-- PROJECT SHOW -->
     <div class="projectShow">
-      <div class="projectTitle">
+      <div class="projectTitle loadTop">
         <span>Tehran, Qarib, Dezashib</span>
         <h1>Mr Mirghani</h1>
       </div>
-      <div class="projectDetail">
+      <div class="projectDetail loadTop">
         <ul>
           <li>
             <h5>Arschitect</h5>
@@ -64,7 +64,7 @@
           </li>
         </ul>
       </div>
-      <div class="section1">
+      <div class="section1 loadTop">
         <p>Eine Neuinterpretation der Villa.</p>
         <p>
           Großzügig, aber nicht abgehoben. Elegant,aber nicht abgehoben.
@@ -76,10 +76,11 @@
           die Zeitlosigkeit des Stils.
         </p>
       </div>
-      <img src="images/Rectangle 4829.jpg" alt="" />
-      <img src="images/Rectangle 4830.jpg" alt="" />
+      <img class="loadTop" src="images/Rectangle 4829.jpg" alt="" />
+      <img class="loadTop" src="images/Rectangle 4830.jpg" alt="" />
+      <div class="section2 loadTop">
 
-      <h2 class="zara">Zara<span> of Project</span></h2>
+      <h2>Zara of Project</h2>
       <p>
         kühl. Für den Neubau einer Familie am Starnberger See haben wir alle
         Grundrisse überarbeitet und ein zeitgemäßes Konzept von Wohnen und Leben
@@ -87,10 +88,12 @@
         geschliffene Zementböden sorgen für Ruhe und Harmonie. Nachhaltigkeit
         entstehtAuswahl der Materialien und durch die Zeitlosigkeit des Stils.
       </p>
-      <img src="images/Rectangle 4831.jpg" alt="" />
-      <img src="images/Rectangle 4832.jpg" alt="" />
-      <div class="section5">
-        <h2><span>About of </span> Zir project</h2>
+    </div>
+
+      <img class="loadTop" src="images/Rectangle 4831.jpg" alt="" />
+      <img class="loadTop" src="images/Rectangle 4832.jpg" alt="" />
+      <div class="section5 loadTop">
+        <h2>About of Zir project</h2>
         <img src="images/Rectangle 4833.jpg" alt="" />
         <p>
           kühl. Für den Neubau einer Familie am Starnberger See haben wir alle
@@ -101,9 +104,9 @@
           Zeitlosigkeit des Stils.
         </p>
       </div>
-      <img src="images/Rectangle 4834.jpg" alt="" />
-      <h2><span>About of</span> Zir project</h2>
-      <div class="section6">
+      <img class="loadTop" src="images/Rectangle 4834.jpg" alt="" />
+      <div class="section6 loadTop">
+      <h2>About of Zir project</h2>
         <img src="images/Rectangle 4835.jpg" alt="" />
         <p>
           kühl. Für den Neubau einer Familie am Starnberger See haben wir alle
@@ -115,8 +118,8 @@
         </p>
       </div>
 
-      <img src="images/Rectangle 4836.jpg" alt="" />
-      <div class="section7">
+      <img class="loadTop" src="images/Rectangle 4836.jpg" alt="" />
+      <div class="section7 loadTop">
         <img src="images/Rectangle 4837.jpg" alt="" />
         <p>
           kühl. Für den Neubau einer Familie am Starnberger See haben wir alle
@@ -128,8 +131,8 @@
         </p>
         <img src="images/Rectangle 4838.jpg" alt="" />
       </div>
-      <img src="images/Rectangle 4839.jpg" alt="" />
-      <div class="relatedProj">
+      <img class="loadTop" src="images/Rectangle 4839.jpg" alt="" />
+      <div class="relatedProj loadTop">
         <h2>Related projects</h2>
         <div class="blogItem">
             <img src="images/Rectangle 4879.jpg" alt="" />
@@ -261,5 +264,8 @@
             </a>
           </div>
         </footer>
+        <script src="js/gsap.min.js"></script>
+        <script src="js/splitType.js"></script>
+        <script src="js/project-show.js"></script>
   </body>
 </html>
