add sound effect and fraction to project list page

--- a/En_project_list.html
+++ b/En_project_list.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Project List</title>
-  <link rel="stylesheet" href="css/swiper.min.844.css" />
+  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/style-mobile.css" />
 </head>
 
@@ -34,8 +34,69 @@
   <div class="projectList">
     <img src="images/Rectangle 4823.jpg" alt="" />
     <div class="projectListSlider">
+      <audio src="mp3/button-push.mp3"></audio>
       <div class="swiper detailSwiper">
         <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="detailSlider">
+              <h2>Mahshid project1</h2>
+              <p>
+                It means simulating a project and better understanding of
+                project implementation. Modeling allows the employer to
+                carefully.
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="detailSlider">
+              <h2>Mahshid project2</h2>
+              <p>
+                It means simulating a project and better understanding of
+                project implementation. Modeling allows the employer to
+                carefully.
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="detailSlider">
+              <h2>Mahshid project3</h2>
+              <p>
+                It means simulating a project and better understanding of
+                project implementation. Modeling allows the employer to
+                carefully.
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="detailSlider">
+              <h2>Mahshid project4</h2>
+              <p>
+                It means simulating a project and better understanding of
+                project implementation. Modeling allows the employer to
+                carefully.
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="detailSlider">
+              <h2>Mahshid project5</h2>
+              <p>
+                It means simulating a project and better understanding of
+                project implementation. Modeling allows the employer to
+                carefully.
+              </p>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="detailSlider">
+              <h2>Mahshid project6</h2>
+              <p>
+                It means simulating a project and better understanding of
+                project implementation. Modeling allows the employer to
+                carefully.
+              </p>
+            </div>
+          </div>
           <div class="swiper-slide">
             <div class="detailSlider">
               <h2>Mahshid project1</h2>
@@ -172,20 +233,96 @@
               </div>
             </div>
           </div>
+          <div class="swiper-slide">
+            <div class="imgSlider">
+              <img src="images/Rectangle 4821.jpg" alt="" />
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H21M21 1V21.0002M21 1L1.98945 20.2132" stroke="white" stroke-opacity="0.85"
+                  stroke-linecap="round" />
+              </svg>
+              <div class="imgTitle">
+                <h3>Mahshid project</h3>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="imgSlider">
+              <img src="images/Rectangle 4821.jpg" alt="" />
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H21M21 1V21.0002M21 1L1.98945 20.2132" stroke="white" stroke-opacity="0.85"
+                  stroke-linecap="round" />
+              </svg>
+              <div class="imgTitle">
+                <h3>Mahshid project</h3>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="imgSlider">
+              <img src="images/Rectangle 4821.jpg" alt="" />
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H21M21 1V21.0002M21 1L1.98945 20.2132" stroke="white" stroke-opacity="0.85"
+                  stroke-linecap="round" />
+              </svg>
+              <div class="imgTitle">
+                <h3>Mahshid project</h3>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="imgSlider">
+              <img src="images/Rectangle 4821.jpg" alt="" />
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H21M21 1V21.0002M21 1L1.98945 20.2132" stroke="white" stroke-opacity="0.85"
+                  stroke-linecap="round" />
+              </svg>
+              <div class="imgTitle">
+                <h3>Mahshid project</h3>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="imgSlider">
+              <img src="images/Rectangle 4821.jpg" alt="" />
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H21M21 1V21.0002M21 1L1.98945 20.2132" stroke="white" stroke-opacity="0.85"
+                  stroke-linecap="round" />
+              </svg>
+              <div class="imgTitle">
+                <h3>Mahshid project</h3>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="imgSlider">
+              <img src="images/Rectangle 4821.jpg" alt="" />
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1H21M21 1V21.0002M21 1L1.98945 20.2132" stroke="white" stroke-opacity="0.85"
+                  stroke-linecap="round" />
+              </svg>
+              <div class="imgTitle">
+                <h3>Mahshid project</h3>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="projectPagination">
         <div class="swiper-pagination"></div>
         <div class="projectNav">
           <div class="prevBtn">
-            <svg width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M8.125 14.75L0.875 7.5L8.12218 0.25" stroke="white" stroke-opacity="0.85" stroke-width="0.5" />
-            </svg>
+            <a href="javascript:void(0)">
+              <svg width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.125 14.75L0.875 7.5L8.12218 0.25" stroke="white" stroke-opacity="0.85" stroke-width="0.5" />
+              </svg>
+            </a>
           </div>
           <div class="nextBtn">
-            <svg width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0.875 14.75L8.125 7.5L0.877823 0.25" stroke="white" stroke-opacity="0.85" stroke-width="0.5" />
-            </svg>
+            <a href="javascript:void(0)">
+              <svg width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0.875 14.75L8.125 7.5L0.877823 0.25" stroke="white" stroke-opacity="0.85" stroke-width="0.5" />
+              </svg>
+            </a>
           </div>
         </div>
       </div>
