--- a/test.html
+++ b/test.html
@@ -4,50 +4,84 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="css/style-mobile.css">
+  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+  <!-- <link rel="stylesheet" href="css/style-mobile.css"> -->
+  <style>
+     html, body {
+        position: relative;
+        height: 100%;
+    }
+    body {
+        background: #eee;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color:#000;
+        margin: 0;
+        padding: 0;
+    }
+    .swiper-container {
+        width: 100%;
+        height: 100%;
+    }
+    .swiper-wrapper{
+      padding-left: initial;
+      margin: 0;
+    }
+    
+    .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        width: 80%;
+        border-right: 1px solid black;
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+    }
+/*     .swiper-slide:nth-child(2n) {
+        width: 60%;
+    }
+    .swiper-slide:nth-child(3n) {
+        width: 40%;
+    } */
+  </style>
 </head>
 <body>
-
-  <section class="cards-scroll">
-    <div class="card">
-      <div class="card__header">
-        <h2>web developer1</h2>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__header">
-        <h2>web developer2</h2>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__header">
-        <h2>web develope3r</h2>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__header">
-        <h2>web developer4</h2>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__header">
-        <h2>web developer5</h2>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__header">
-        <h2>web developer6</h2>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card__header">
-        <h2>web developer7</h2>
-      </div>
-    </div>
-  </section>
-  <script src="js/gsap.min.js"></script>
-  <script src="js/ScrollTrigger.min.js"></script>
-  <script src="js/jquery.js"></script>
-  <script src="js/test.js"></script>
+  <div class="swiper-container">
+    <ul class="swiper-wrapper">
+        <li class="swiper-slide">Slide 1</li>
+        <li class="swiper-slide">Slide 2</li>
+        <li class="swiper-slide">Slide 3</li>
+        <li class="swiper-slide">Slide 4</li>
+        <li class="swiper-slide">Slide 5</li>
+        <li class="swiper-slide">Slide 6</li>
+        <li class="swiper-slide">Slide 7</li>
+        <li class="swiper-slide">Slide 8</li>
+        <li class="swiper-slide">Slide 9</li>
+        <li class="swiper-slide">Slide 10</li>
+    </ul>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+</div>
+  <script src="js/swiper4.7.js"></script>
+<script>
+   var swiper = new Swiper('.swiper-container', {
+    
+        pagination: '.swiper-pagination',
+        slidesPerView: 'auto',
+        paginationClickable: true,
+        spaceBetween: 0
+    });
+</script>  
 </body>
 </html>
